# UpSale

./: .env.example  .gitignore  README.md  alembic.ini  app.py  main.py  package-lock.json  pyproject.toml  requirements.txt  run_tunnel.py  run_with_tunnel.py
alembic/: env.py
alembic/versions/: 001_initial.py
backend/: main.py  main_becup_.py
backend/ai/: client_simulator.py  transcriber.py
backend/analysis/: llm.py  metrics.py  parser.py  report.py
backend/api/: __init__.py
backend/api/routes/: admin.py  auth.py  calls.py  simulations.py  templates.py  workspaces.py
backend/audio/: audio_capture.py  manager.py  recorder.py  writer.py
backend/core/: config.py  db.py  security.py  types.py
backend/models/: __init__.py  call_report.py  client_template.py  real_call.py  simulation_session.py  transcript.py  user.py  workspace.py  workspace_member.py
backend/repositories/: __init__.py  call_repo.py  simulation_repo.py  template_repo.py  user_repo.py  workspace_repo.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: AuthForm.tsx  CallCard.tsx  GlobalLanguageSwitcher.tsx  ReportCard.tsx  Sidebar.tsx  TrainerHistory.tsx  TrainerPanel.tsx  TranscriptViewer.tsx  WorkspaceSelector.tsx
frontend/src/lib/: api.ts  browserRecorder.ts  store.ts  utils.ts
frontend/src/types/: index.ts
tests/: test_transcription_roles.py
(+6 files in other folders)
